@startuml
!pragma layout smetana
class PlateauFactory{
    + makePlateau(typePlateau : Plateau[], plateauBateau : PlateauBateau): Plateau
}

abstract class Plateau {
    # Plateau plateau
    + PlateauDecorator (plateau : Plateau)
    + ajouterTir ()
}


abstract class Joueur{
    # determinerTir(): pair
    + demanderPlacerBateaux()
    # determinerPlacerBateaux()
}

class MenuPrincipal{
    + {static} main(args: String[])
    + afficherMenu()
    - jouerNouvellePartie()
    - jouerPartieExistante(nomFichier: String)
    - quitterJeu()
}

class Jeu {
    + jouer()
    - determinerModeJeu()
    - actualiserPlateaux(coordonnee: pair, plateau: Plateau)
    - effectuerProchainTour()
    - determinerGagnant()
}

class PlateauBateau {
    + PlateauBateau (plateau : Plateau)
    + placerBateau()
    + ajouterTir ()
}

class PlateauTir {
    + PlateauTir (plateau : Plateau)
    - verifierTir(coordonnee: pair)
    + ajouterTir ()
}

class Bateau {
    - Position[]: pair
    - PointDeVie: int
    + estTouche(coordonnee: pair): Tir
}

enum Case {
    + aucun
    + rate
    + touche
    + coule
    + Bateau
}

class IADebutant {
    # determinerTir(): pair
}

class IAAvance{
    # determinerTir(): pair
}

class ChargeurPartie {
    + {static} chargerPartie(nomFichier: String): Jeu
}

class VisualiseurPartie {
    - timelinePlateaux [ ]
    + visualiserPartie(): pair<PlateauBateau,PlateauTir>
    + ajouterEtape(plateau : Plateau)
}

class AfficheurPartie {
    + {static} afficherPartie(plateauBat: PlateauBateau, plateauTir: PlateauTir)
}

class EnregistreurPartie {
    + {static} enregistrerPartie(nomFichier: String, jeu: Jeu)
}

class Personne {
    # determinerTir(): pair
    # determinerPlacerBateaux(List<Coordonnee>, numeroBateau: int>)
}

PlateauBateau -- "5" Bateau
Plateau <|-- PlateauBateau
Plateau <|-- PlateauTir
Jeu -right-> EnregistreurPartie
Jeu -right-> VisualiseurPartie
Jeu -right-> AfficheurPartie
MenuPrincipal -> ChargeurPartie
MenuPrincipal ---> Jeu
Jeu --- "4" Plateau
Plateau -down- "*" Case
Joueur <|-right- Personne
Joueur <|-down- IADebutant
Joueur <|-down- IAAvance
Jeu *-left-- "2" Joueur
PlateauBateau <- PlateauTir
VisualiseurPartie --> AfficheurPartie
PlateauFactory -left-> Plateau
Jeu --  PlateauFactory
@enduml